# cs7319-795a-homework1

./: Dockerfile  README.md  app.py  docker-compose.yml  main.py  mypy.ini  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docker-build.yml  mypy.yml  pylint.yml  pytest.yml  ruff.yml
src/: app.py
tests/: test_app.py
