[project]
name = "cs7319-795a-homework1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kuzu>=0.11.1",
    "langchain>=0.3.27",
    "openai>=1.99.9",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

